prevents unnecessary show of scrollbar #231

--- a/public/contact/contact.css
+++ b/public/contact/contact.css
@@ -121,7 +121,7 @@ html,body {
 
 .form-section {
     display: none;
-    height:100%;
+    height:96%;
 }
 
 .form-section.current{
